# single-pool

./: Cargo.toml  Makefile  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/actions/setup/: action.yml
.github/workflows/: dependabot-auto-merge.yml  main.yml  publish-js-client.yml  publish-js.yml  publish-rust.yml
clients/cli/: Cargo.toml
clients/cli/src/: cli.rs  config.rs  main.rs  output.rs  quarantine.rs
clients/cli/tests/: test.rs
clients/js/: package.json  pnpm-lock.yaml  tsconfig-base.json
clients/js-legacy/: package.json  pnpm-lock.yaml  tsconfig.declarations.json  tsup.config.ts
clients/js-legacy/src/: addresses.ts  instructions.ts  internal.ts  transactions.ts
clients/js-legacy/tests/: transactions.test.ts
clients/js/src/: addresses.ts  instructions.ts  transactions.ts
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  inline_mpl_token_metadata.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: accounts.rs  create_pool_token_metadata.rs  deposit.rs  deposit_sol.rs  deposit_stake.rs  helpers_tests.rs  initialize.rs  replenish.rs  update_pool_token_metadata.rs  withdraw.rs  withdraw_stake.rs
program/tests/helpers/: mod.rs  stake.rs  token.rs
scripts/: audit-rust.mjs  restart-test-validator.sh  solana.dic
scripts/client/: publish-js-legacy.mjs  test-js-legacy.mjs  test-js.mjs
scripts/js/: publish.mjs
