[package]
name = "spl-single-pool"
version = "2.0.0"
description = "Solana Program Library Single-Validator Stake Pool"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/single-pool"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.9"
borsh = "1.5.7"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.4"
solana-account-info = "2.3"
solana-borsh = "2.2"
solana-clock  = "2.2"
solana-cpi = "2.2"
solana-instruction = "2.2"
solana-msg = "2.2"
solana-native-token = "3.0"
solana-program-entrypoint = "2.3"
solana-program-error = "2.2"
solana-program-pack = "2.2"
solana-pubkey = { version = "2.2", features = ["borsh", "curve25519"] }
solana-rent = "2.2"
solana-stake-interface  = { version = "1.2.1", features = ["borsh"] }
solana-system-interface  = "1.0.0"
solana-sysvar  = "2.2"
solana-vote-interface  = "2.2.6"
solana-security-txt = "1.1.1"
spl-token = { version = "8.0", features = ["no-entrypoint"] }
thiserror = "2.0"

[dev-dependencies]
agave-feature-set = "2.2"
solana-program-test = "2.3.4"
solana-sdk = "2.2"
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account-client = { version = "2.0.0" }
test-case = "3.3"
bincode = "1.3.1"
rand = "0.9.2"
approx = "0.5.1"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
