[package]
name = "spl-single-pool"
version = "3.0.1"
description = "Solana Program Library Single-Validator Stake Pool"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/single-pool"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
arrayref = "0.3.9"
borsh = "1.6.0"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.5"
solana-account-info = "3.1"
solana-borsh = "3.0"
solana-clock = "3.0"
solana-cpi = "3.1"
solana-instruction = "3.0"
solana-msg = "3.0"
solana-native-token = "3.0"
solana-program-entrypoint = "3.1"
solana-program-error = "3.0"
solana-program-pack = "3.0"
solana-pubkey = { version = "4.0", features = ["borsh", "curve25519"] }
solana-rent = "3.0"
solana-stake-interface = { version = "2.0.1", features = ["bincode", "borsh", "sysvar"] }
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-sysvar = "3.1"
solana-vote-interface = { version = "4.0.4", features = ["bincode"] }
solana-security-txt = "1.1.2"
spl-token-interface = "2.0.0"
thiserror = "2.0"

[dev-dependencies]
agave-feature-set = "3.1"
solana-program-test = { version = "3.1.3", features = ["agave-unstable-api"] }
solana-sdk = "3.0"
spl-associated-token-account-interface = "2.0.0"
test-case = "3.3"
bincode = "1.3.3"
rand = "0.9.2"
approx = "0.5.1"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
