[package]
name = "spl-single-pool-cli"
version = "2.0.0"
description = "Solana Program Library Single-Validator Stake Pool Command-line Utility"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/single-pool"
license = "Apache-2.0"
edition = "2021"

[dependencies]
agave-feature-set = "2.2"
bincode = "1.3.1"
borsh = "1.5.7"
clap = { version = "3.2.23", features = ["derive"] }
console = "0.16.0"
serde = "1.0.219"
serde_derive = "1.0.103"
serde_json = "1.0.142"
serde_with = "3.13.0"
solana-account-decoder = "2.3.4"
solana-borsh = "3.0"
solana-clap-v3-utils = "2.3.4"
solana-cli-config = "2.3.4"
solana-cli-output = "2.3.4"
solana-client = "2.3.4"
solana-clock = "2.2"
solana-commitment-config = "2.2"
solana-epoch-schedule = "2.2"
solana-instruction = "2.2"
solana-keypair = "2.2"
solana-logger = "2.2"
solana-native-token = "3.0"
solana-pubkey = "2.2"
solana-remote-wallet = "2.3.4"
solana-rent = "2.2"
solana-sdk-ids = "2.2"
solana-signature = "2.3"
solana-signer = "2.2"
solana-system-interface = "1.0"
solana-sysvar = "2.2"
solana-stake-interface = "1.2.0"
solana-stake-program = "2.2"
solana-transaction = "2.2"
solana-transaction-status = "2.3.4"
solana-vote-program = "2.2"
spl-token = { version = "8.0", features = ["no-entrypoint"] }
spl-token-client = { version = "0.16.1" }
spl-single-pool = { version = "2.0.0", path = "../../program", features = [
  "no-entrypoint",
] }
tokio = "1.47"

[dev-dependencies]
solana-test-validator = "2.3.4"
serial_test = "3.2.0"
test-case = "3.3"
tempfile = "3.20.0"

[[bin]]
name = "spl-single-pool"
path = "src/main.rs"
