[package]
name = "spl-single-pool-cli"
version = "3.0.0"
description = "Solana Program Library Single-Validator Stake Pool Command-line Utility"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/single-pool"
license = "Apache-2.0"
edition = "2021"

[dependencies]
agave-feature-set = "3.1"
bincode = "1.3.3"
borsh = "1.6.0"
clap = { version = "3.2.25", features = ["derive"] }
console = "0.16.1"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.16.1"
solana-account = "3.2"
solana-account-decoder = "3.1.3"
solana-borsh = "3.0"
solana-clap-v3-utils = { version = "3.1.3", features = ["agave-unstable-api"] }
solana-cli-config = "3.1.3"
solana-cli-output = { version = "3.1.3", features = ["agave-unstable-api"] }
solana-client = "3.1.3"
solana-clock = "3.0"
solana-commitment-config = "3.1"
solana-epoch-schedule = "3.0"
solana-instruction = "3.0"
solana-keypair = "3.0"
solana-logger = "3.0"
solana-native-token = "3.0"
solana-pubkey = "4.0"
solana-remote-wallet = "3.1.3"
solana-rent = "3.0"
solana-sdk-ids = "3.1"
solana-signature = "3.1"
solana-signer = "3.0"
solana-system-interface = "3.0"
solana-sysvar = "3.1"
solana-stake-interface = "2.0.1"
solana-stake-program = "4.0"
solana-transaction = "3.0"
solana-transaction-status = "3.1.3"
solana-vote-program = "3.1"
spl-associated-token-account-interface = "2.0.0"
spl-token = { version = "9.0", features = ["no-entrypoint"] }
spl-token-client = { version = "0.18.0" }
spl-single-pool = { version = "3.0.0", path = "../../program", features = [
  "no-entrypoint",
] }
tokio = "1.49"

[dev-dependencies]
solana-test-validator = "3.1.3"
serial_test = "3.3.1"
test-case = "3.3"
tempfile = "3.23.0"

[[bin]]
name = "spl-single-pool"
path = "src/main.rs"
