[package]
name = "spl-single-pool-cli"
version = "4.0.0"
description = "Solana Program Library Single-Validator Stake Pool Command-line Utility"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/single-pool"
license = "Apache-2.0"
edition = "2021"

[dependencies]
agave-feature-set = "3.1"
bincode = "1.3.3"
borsh = "1.6.1"
clap = { version = "3.2.25", features = ["derive"] }
console = "0.16.3"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.150"
serde_with = "3.21.0"
solana-account = "4.0"
solana-account-decoder = "4.1.0"
solana-borsh = "3.0"
solana-clap-v3-utils = { version = "4.1.0", features = ["agave-unstable-api"] }
solana-cli-config = "4.1.0"
solana-cli-output = { version = "4.1.0", features = ["agave-unstable-api"] }
solana-client = "4.1.0"
solana-clock = "3.0"
solana-commitment-config = "3.1"
solana-epoch-schedule = "3.0"
solana-instruction = "3.0"
solana-keypair = "3.0"
solana-logger = "3.0"
solana-native-token = "3.0"
solana-program-pack = "3.0"
solana-pubkey = "4.2"
solana-remote-wallet = "4.1.0"
solana-rent = "4.0"
solana-sdk-ids = "3.1"
solana-signature = "3.1"
solana-signer = "3.0"
solana-system-interface = "3.0"
solana-sysvar = "3.1"
solana-stake-interface = "4.3.1"
solana-transaction = "4.0"
solana-transaction-status = "3.1.3"
solana-vote-interface = { version = "5.0.0", features = ["bincode"] }
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "3.0.0"
spl-single-pool = { version = "6.0.0", path = "../../program", features = [
  "no-entrypoint",
] }
tokio = "1.52"

[dev-dependencies]
solana-test-validator = "4.1.0"
serial_test = "3.5.0"
test-case = "3.3"
tempfile = "3.27.0"

[[bin]]
name = "spl-single-pool"
path = "src/main.rs"
